--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "zone_convert",
   "version": "0.0.1",
-  "description": "A Timezone library",
+  "description": "A Timezone conversion library",
   "main": "index.js",
   "author": "bojbrook",
   "scripts": {
