--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "author": "bojbrook",
   "scripts": {
     "start": "node index.js",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint ."
   },
   "keywords": [
     "timezone",
@@ -15,6 +16,12 @@
   ],
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.13.0",
+    "eslint": "^9.13.0",
+    "globals": "^15.11.0",
     "jest": "^29.7.0"
+  },
+  "dependencies": {
+    "eslint-plugin-jest": "^28.8.3"
   }
 }
