--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "timezone_converter",
+  "name": "zone_converter",
   "version": "0.0.2",
   "description": "A Timezone conversion library",
   "main": "index.js",
