--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jest": "^29.7.0"
   },
   "dependencies": {
-    "eslint-plugin-jest": "^28.8.3"
+    "eslint-plugin-jest": "^28.8.3",
+    "winston": "^3.15.0"
   }
 }
